fix - apache couldn't connect with php socket because of permission issues

--- a/docker/httpd.conf
+++ b/docker/httpd.conf
@@ -67,7 +67,7 @@ Include conf.modules.d/*.conf
 # running httpd, as with most system services.
 #
 User apache
-Group apache
+Group root
 
 # 'Main' server configuration
 #
