--- a/docker/apache-vhost-https.conf
+++ b/docker/apache-vhost-https.conf
@@ -5,7 +5,7 @@
   </Location>
 
   ServerAdmin admin@localhost
-  DocumentRoot /var/www/html/public
+  DocumentRoot /var/www/html
   ErrorLog /tmp/logpipe
   CustomLog /dev/stdout combined
 
