Revert "fix redirection to php and missing env variables"
This reverts commit 63090272ebce513797aca3fb97b7eb18b68d551f.

--- a/docker/httpd.conf
+++ b/docker/httpd.conf
@@ -144,14 +144,14 @@ DocumentRoot "/var/www/html"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options -Indexes
+    Options Indexes FollowSymLinks
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
-    AllowOverride All
+    AllowOverride None
 
     #
     # Controls who can get stuff from this server.
@@ -355,27 +355,6 @@ EnableSendfile on
 # Load config files in the "/etc/httpd/conf.d" directory, if any.
 IncludeOptional conf.d/*.conf
 
-# php configuration
-<FilesMatch \.php$>
-        SetHandler application/x-httpd-php
-</FilesMatch>
-DirectoryIndex disabled
-DirectoryIndex index.php index.html
 
 # Include the configuration from the "/etc/httpd/sites-enabled folder
 IncludeOptional sites-enabled/*.conf
-
-# AccessFileName: The name of the file to look for in each directory
-# for additional configuration directives.  See also the AllowOverride
-# directive.
-#
-AccessFileName .htaccess
-
-#
-# The following lines prevent .htaccess and .htpasswd files from being
-# viewed by Web clients.
-#
-<FilesMatch "^\.ht">
-	Require all denied
-</FilesMatch>
-
